# immich-flickr-sync

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
docs/: spec.md
docs/superpowers/plans/: 2026-06-09-immich-flickr-sync.md
immich_flickr_sync/: cli.py  config.py  flickr.py  immich.py  state.py  sync.py
tests/: conftest.py  test_cli.py  test_config.py  test_flickr.py  test_immich.py  test_state.py  test_sync.py
